--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,35 +1,60 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
-name: Metrics
-on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 0 * * 1"}]
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: lowlighter/metrics@latest
-        with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.METRICS_TOKEN }}
+# # Visit https://github.com/lowlighter/metrics#-documentation for full reference
+# name: Metrics
+# on:
+#   # Schedule updates (each hour)
+#   schedule: [{cron: "0 0 * * 1"}]
+#   # Lines below let you run workflow manually and on each commit
+#   workflow_dispatch:
+#   push: {branches: ["master", "main"]}
+# jobs:
+#   github-metrics:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write
+#     steps:
+#       - uses: lowlighter/metrics@latest
+#         with:
+#           # Your GitHub token
+#           # The following scopes are required:
+#           #  - public_access (default scope)
+#           # The following additional scopes may be required:
+#           #  - read:org      (for organization related metrics)
+#           #  - read:user     (for user related data)
+#           #  - read:packages (for some packages related data)
+#           #  - repo          (optional, if you want to include private repositories)
+#           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Options
-          user: neilkuan
-          config_timezone: Asia/Taipei
-          base: ""
-          plugin_stargazers: yes
-          delay: 120
-          plugins_errors_fatal: yes
-          plugin_isocalendar: yes
+#           # Options
+#           user: neilkuan
+#           config_timezone: Asia/Taipei
+#           base: ""
+#           plugin_stargazers: yes
+#           delay: 120
+#           plugins_errors_fatal: yes
+#           plugin_isocalendar: yes
+
+name: GitHub-Profile-3D-Contrib
+
+on:
+  schedule: # 03:00 JST == 18:00 UTC
+    - cron: "0 18 * * *"
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    name: generate-github-profile-3d-contrib
+    steps:
+      - uses: actions/checkout@v2
+      - uses: yoshi389111/github-profile-3d-contrib@0.7.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USERNAME: ${{ github.repository_owner }}
+      - name: Commit & Push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A .
+          git commit -m "generated"
+          git push
 
